# maths

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSphinx.cmake
docs/: .buildinfo  CMakeLists.txt  Doxyfile.in  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docsgen/: conf.py
gendocs/: CMakeLists.txt  conf.py  index.rst
src/: CMakeLists.txt  maths.c  maths.h
tests/: CMakeLists.txt  maths_test.c
